--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="../assets/css/leaflet.css" rel="stylesheet" />
-  <link href="../assets/css/leaflet.draw.css" rel="stylesheet" />
-  <script src="../assets/js/leaflet.js"></script>
-  <script src="../assets/js/leaflet.draw.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2.rc.2/leaflet.js"></script>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2.rc.2/leaflet.css" rel="stylesheet" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.js"></script>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.css" rel="stylesheet" />
+   
+
+  <!-- <link href="../assets/css/leaflet.css" rel="stylesheet" /> -->
+  
+  <!-- <link href="../assets/css/leaflet.draw.css" rel="stylesheet" /> -->
+  <!-- <script src="../assets/js/leaflet.js"></script> -->
+  
+ 
+  <!-- <script src="../assets/js/leaflet.draw.js"></script> -->
   <link rel="stylesheet" href="../assets/css/leaflet-radar.css"></script>
   <script src="../assets/js/leaflet-radar.js"></script>
   <link rel="stylesheet" href="../assets/css/MarkerCluster.css" />
